# interpretable-mof-failure-maps

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  environment.yml  interpretable_failure_maps_pipeline.py  pyproject.toml  requirements.txt
data/: README.md
data/raw/: README.md
data/source_data/: README.md
docs/: CLEAN_DATA_RELEASE.md  DATA_AVAILABILITY.md  DATA_SCHEMA.md  EXPECTED_INPUTS.md  GITHUB_UPLOAD_STEPS.md  MANUSCRIPT_MAPPING.md  OUTPUTS.md  REPRODUCIBILITY.md  SUBMISSION_CHECKLIST.md
manuscript_assets/: README.md
notebooks/: README.md
results/: README.md
scripts/: README.md  check_clean_data_release.py  validate_repository_release.py
src/interpretable_failure_maps/: __init__.py
supplementary_assets/: README.md
