[project]
name = "interpretable-mof-failure-maps"
version = "0.1.0"
description = "Reproducibility package for chemically auditable MOF adsorption failure atlases."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Shayan Abaei"},
  {name = "Mehrdad Asgari"}
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "joblib>=1.3",
]

[tool.setuptools]
package-dir = {"" = "src"}
