[project]
name = "interpretable-mof-failure-maps"
version = "0.2.0"
description = "Reproducibility package for descriptor-trust atlases in MOF adsorption machine learning."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Shayan Abaei"},
  {name = "Fatemeh Masoudi"},
  {name = "Hosein Alimardani"},
  {name = "Mehrdad Asgari"}
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "joblib>=1.3",
  "tqdm>=4.66",
  "pyarrow>=12.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
